# upgraded-train

./: .gitignore  23.05.3-Dockerfile  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.mt7632  Dockerfile.mt7981  README.MD  dockerfile  entrypoint.sh  llvm-cmake.Dockerfile  report.txt  vcpkg-configuration.json  vcpkg.json
.ci/: build-project-cxx.sh  build-project.sh
.devcontainer/ubuntu24/: Dockerfile  custom_script.sh  devcontainer.json
.github/actions/cache-build-dir/: action.yml
.github/workflows/: automate_build_of_repo.yml  build-gcc-13-from-source.yml  build-gcc-from-source.yml  build-llvm-cmake-image.yml  build-llvm-toolchain.yml  build_curl_http3.yml  build_grpc_lib_alpine.yml  build_h2o.yml  build_msvc_psl.yml  build_nginx_static.yml  build_openwrt_toolchains.yml  build_openwrt_toolchains_ghrc arm64.yml  build_openwrt_toolchains_ghrc.yml  build_via_vc_pkg.yml  cross_compiler.yml  crosstools-ng-ci-build.yml  curl-static-build.yaml  example-cpp-ci.yml  llvm-build-test.yml  llvm-docker-build.yml  matrix-btop-make.yml  nginx_binary_build.yml  publish-image.yml  push_on_action.yml  setup_yt_dlp.yml  test_run_step_in_docker.yml  testing-multile-job-and-matrix.yml  testing_built_image.yml  using_Ram_disk_in_action.yml  zsh_cross_build.yml
assets/: package.json
cmake/: DefaultCompilerWarnings.cmake  GuardCompiler.cmake  mipsel-linux-gcc.cmake
samples/aarch64-unknown-linux-gnu/: crosstool.config
samples/mipsel-unknown-linux-gnu/: crosstool.config
samples/x86_64-alpine-linux-musl/: crosstool.config
scripts/: 0001-Fix-compilation-with-disable-manual.patch  alpine_build_lib_test.sh  build-nginx  build_cross_gcc.sh  build_curl_http3.sh  build_curl_http3_openwrt.sh  build_fmt.sh  build_fmt_lib.sh  build_gcc.sh  build_gcc_cross.sh  build_gcc_mips.sh  build_h2o.sh  build_h2o_openwrt.sh  build_libpsl.ps1  build_libpsl.sh  build_llvm.ps1  build_llvm.sh  build_llvm_distribution.sh  build_llvm_mac.sh  build_nginx_static.sh  build_openwrt_bin_libs.sh  build_vim_static.sh  build_with_vcpkg.sh  build_zlib_and_openssl.sh  build_zlib_and_openssl_mipsel.sh  build_zsh.sh  convert_video_to_av1.sh  download_youtube_videos.sh  functions.sh  install_llvm.sh  nginx-builder.sh  post_build_scripts.sh  publish_gh_release.sh  show_docker_info.sh  version.sh
src/: bar.cpp  foo.cpp  main.cpp
src/include/: bar.h  foo.h
test/: clangTest.cpp
